v2.6.2.0 - Added support for OpenEXR's display window and for moving data
	   windows.
	 - Adapted fit image function to handle moving data window.
	 - Adapted color info for moving data window.
	 - Added support for animated GIFs.
	 - Adapted draw routines to draw in data window.
	 - Adapted masking routines to draw in data window.
v2.6.1.1 - Fixed audio pops in transcoding of movie files.  However, there's
	   still no way to save a H264 movie with audio from a sequence of
	   images.
v2.6.1.0 - Fixed audio saving in mpeg4 and H264.  However, there are still
	   cases that fail or that show pops in the audio.
v2.6.0.0 - Added options to save H264 movie files in YUV420 or YUV444.
	 - Added options to save audio in MP3 format, but there's still some
	   "pops" in the output of most files and sync issues.
	 - Fixed searching to a point with audio not being found.  Now
	   searching is more solid.
	 - Made audio saving a non-default option due to the bugs that still
	   plague it.
v2.5.9.1 - Switching images no longer auto refits them in view when autorefit
	   is on.  It keeps zoom level and offset so as to compare two images 
	   at closeup. Only when window is resized or the image is loaded,
	   autofit takes over.
	 - Made Single Instance of viewer an alert when another instance is
	   running.  The alert also tells user where to remove the lock file.
	 - ffmpeg has a new -gamma flag for EXRs to support creating movies
	   at other gamma values (2.2).
	 - Bug fixed EDL when more than 2 reels were created and drag happened
	   to an invisible track.
	 - Bug fixed EDL when one image was loaded and switched tracks would no
	   longer play it back.
	 - Bug fixed CTL creation when path is the same but images (primaries)
	   are not.

v2.5.9.0 - Added multipart EXR support for multiple parts (new pass system) 
	   and stereo (anaglyph, horizontal and crosseyed).  
	   Support is given for deepscanline and scanline images.