@@ -48,7 +48,7 @@ static const char* kModule = "file";
   static const std::string kMoviePattern = "mp4,MP4,mpg,MPG,mpeg,MPEG,mov,MOV,qt,QT,avi,AVI,flv,FLV,divx,DIVX,wmv,WMV,vob,VOB";
 
   static const std::string kImagePattern =
-    "bmp,bit,cin,ct,dpx,exr,iff,jpg,JPG,jpeg,JPEG,map,nt,mt,pic,png,psd,rgb,rpf,"
+    "bmp,bit,cin,ct,dpx,exr,gif,GIF,iff,jpg,JPG,jpeg,JPEG,map,nt,mt,pic,png,psd,rgb,rpf,"
     "shmap,sgi,st,sxr,tga,tif,tiff,zt";
 
   static const std::string kProfilePattern = "icc,icm,ICC,ICM";
